# haskell

./: .ghci  .gitignore  README.md  SynaxInFunction.hs  baby.hs  haskell.cabal  hie.yaml  hof.hs  package.yaml  recursion.hs  stack.yaml  typesAndTypeclasses.hs
app/: Main.hs
resources/: haiku.txt  log.csv  palindromes.txt  todo.txt
src/: Baby.hs  DataTypeAndTypeclasses.hs  FunctorCodes.hs  HeathrowToLondon.hs  Hof.hs  KnightsQueat.hs  Modules.hs  MonadCodes.hs  MoreMonadCodes.hs  MyIO.hs  MyIOCodes.hs  Person.hs  Randomness.hs  Recursion.hs  ReversePolishNotation.hs  SyntaxInFunction.hs  TypesAndTypeclasses.hs  ZippersCodes.hs
src/Archive/: ArrowExpr.hs  ArrowSyntax.hs  AttoparsecExpr.hs  CPS.hs  ContExpr.hs  ContTExpr.hs  ConvertIOMonad.hs  EitherExpr.hs  Misc.hs  MonadExpr.hs  MonadLoopExpr.hs  MonadTrans.hs  PipeExpr.hs  SeqExpr.hs  State.hs  StateMonad.hs  Unsafe.hs  ViewPattern.hs  ViewPatterns.hs
src/Archive/Expr/: ConvertIOMonad.hs  MonadTrans.hs
src/Expr/: MonadTrans.hs
src/Geometry/: Cube.hs  Cuboid.hs  Sphere.hs
src/LensExpr/: Intro.hs
src/Lyah/: Baby.hs  DataTypeAndTypeclasses.hs  FunctorCodes.hs  HeathrowToLondon.hs  Hof.hs  KnightsQueat.hs  Modules.hs  MonadCodes.hs  MoreMonadCodes.hs  MyIOCodes.hs  Person.hs  Randomness.hs  Recursion.hs  ReversePolishNotation.hs  SyntaxInFunction.hs  TypesAndTypeclasses.hs  ZippersCodes.hs
src/Lyah/Geometry/: Cube.hs  Cuboid.hs  Sphere.hs
src/Lyhfgg/: Baby.hs  DataTypeAndTypeclasses.hs  FunctorCodes.hs  HeathrowToLondon.hs  Hof.hs  KnightsQueat.hs  Modules.hs  MonadCodes.hs  MoreMonadCodes.hs  MyIOCodes.hs  Person.hs  Randomness.hs  Recursion.hs  ReversePolishNotation.hs  SyntaxInFunction.hs  TypesAndTypeclasses.hs  ZippersCodes.hs
src/Lyhfgg/Expr/: MonadTrans.hs
src/Lyhfgg/Geometry/: Cube.hs  Cuboid.hs  Sphere.hs
src/Ph2/: AbstractMachien.hs  Common.hs  CountdownProb.hs  Hangman.hs  Life.hs  MiscCodes.hs  Nim.hs  Tictactoe.hs
src/Pia/: Circuits.hs  Intro.hs  Unsafe.hs
src/Pih/: AbstractMachien.hs  Ballots.hs  CaesarCryption.hs  CalculatingCompilers.hs  Common.hs  CountdownProb.hs  Hangman.hs  Life.hs  LuhnAlgo.hs  MiscCodes.hs  MonadParser.hs  Nim.hs  Reasoning.hs  StateMonad.hs  TautologyProver.hs  Tictactoe.hs
