cabal-version:      2.4
name:               haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             inap-bannai
maintainer:         bannairyt@inap-vision.co.jp

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

-- $ /Users/ryotabannai/.cabal/bin/cabal-fmt haskell.cabal -i // expands nested modules.
library
  -- cabal-fmt: expand src
  exposed-modules:
    Archive.ArrowExpr
    Archive.ConvertIOMonad
    Archive.MonadTrans
    Lyah.Baby
    Lyah.DataTypeAndTypeclasses
    Lyah.FunctorCodes
    Lyah.Geometry.Cube
    Lyah.Geometry.Cuboid
    Lyah.Geometry.Sphere
    Lyah.HeathrowToLondon
    Lyah.Hof
    Lyah.KnightsQueat
    Lyah.Modules
    Lyah.MonadCodes
    Lyah.MoreMonadCodes
    Lyah.MyIOCodes
    Lyah.Person
    Lyah.Randomness
    Lyah.Recursion
    Lyah.ReversePolishNotation
    Lyah.SyntaxInFunction
    Lyah.TypesAndTypeclasses
    Lyah.ZippersCodes
    Pia.Circuits
    Pia.Intro
    Pih.AbstractMachien
    Pih.Ballots
    Pih.CaesarCryption
    Pih.CalculatingCompilers
    Pih.Common
    Pih.CountdownProb
    Pih.Hangman
    Pih.Life
    Pih.LuhnAlgo
    Pih.MonadParser
    Pih.Nim
    Pih.Reasoning
    Pih.StateMonad
    Pih.TautologyProver
    Pih.Tictactoe

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base          ^>=4.14.2.0
    , bytestring    ^>=0.10.12.0
    , containers    ^>=0.6.4.1
    , flow          ^>=1.0.22
    , monadlist     ^>=0.0.2
    , mtl           ^>=2.2.2
    , random        ^>=1.2.0
    , text          ^>=1.2.4.1
    , transformers  ^>=0.5.6.2

  hs-source-dirs:   src
  default-language: Haskell2010

executable haskell
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base       ^>=4.14.2.0
    , directory  ^>=1.3.6.0
    , haskell
    , random     ^>=1.2.0

  hs-source-dirs:   app
  default-language: Haskell2010
